# LOQ-24-zone-RGB-controller

./: LICENSE  README.md  next.config.ts  package-lock.json  package.json  tsconfig.json
.github/workflows/: main.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio_sampler.rs  effect_runner.rs  effects.rs  input_handler.rs  installer.rs  led_driver.rs  lib.rs  lighting.rs  main.rs  settings.rs
src-tauri/src/effects/: mod.rs  rainbow.rs  script_engine.rs  static_color.rs
src-tauri/src/presets/: ambient.rs  audio_ripple.rs  audio_sparkle.rs  audio_sparkle_media.rs  audio_sparkle_rainbow.rs  aurora.rs  breathing.rs  chromaticBreath.rs  edgeGlow.rs  energyPulse.rs  fireFlow.rs  heatwave.rs  horizon.rs  horse.rs  horseCycle.rs  keyRipple.rs  mod.rs  nebula.rs  ocean.rs  off.rs  pulse.rs  rainbowBreath.rs  rainbowCycle.rs  rainbowWave.rs  rainbow_ripple.rs  rpm.rs  scan.rs  silk.rs  sparkle.rs  staticColor.rs  stillGradient.rs  sweep.rs  thermalStatus.rs  wheel.rs
src-tauri/src/win_utils/: register_startup.rs
src/app/: globals.css  layout.tsx  page.tsx
src/app/components/: Keyboard.tsx  Sidebar.tsx  brightness.tsx  menu.tsx  setter.tsx
src/app/console/: page.tsx
src/app/hardware/: page.tsx
src/app/settings/: page.tsx
