[package]
name = "led-controller-driver"
version = "0.1.0"
description = "Rust driver for lenovo 24 zone rgb keyboard"
authors = ["Dhruv Goel"]
edition = "2021"
rust-version = "1.77.2"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }


[dependencies]
tauri = { version = "1.6", features = [ "system-tray", "api-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hidapi = "2.4"
once_cell = "1.19"
rand = "0.8"
winreg = "0.52"
tokio = { version = "1", features = ["full"]}

[lib]
name = "led_driver"
path = "src/lib.rs"
