[package]
name = "led-controller-driver"
version = "2.1.2"
description = "Rust driver for lenovo 24 zone rgb keyboard"
authors = ["Dhruv Goel"]
edition = "2021"
rust-version = "1.77.2"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }


[dependencies]
tauri = { version = "1.6", features = [ "system-tray", "api-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hidapi = "2.4"
once_cell = "1.19"
rand = "0.8"
winreg = "0.52"
sysinfo = "0.38.0"
nvml-wrapper = "0.11.0"
cpal = "0.15"
tokio = { version = "1", features = ["full"] }
windows = { version = "0.52", features = [
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
    "Win32_System_Threading",
    "Win32_Foundation"
] }
anyhow = "1.0"
rdev = "0.5"

[lib]
name = "led_driver"
path = "src/lib.rs"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
